# wlr-alt-backtick

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Justfile  LICENSE
cmake/: linux_deps.cmake  toolchain-linux-zig.cmake
cmake/libffi/ext/include/: ffi.h  fficonfig.h
cmake/wayland-client/ext/: config.h
cmake/wayland-scanner/: .gitignore  CMakeLists.txt  Justfile
cmake/wayland-scanner/ext/libwayland/wayland-scanner/include/: wayland-version.h
scripts/: zig-ar  zig-c++  zig-ld.lld  zig-ranlib
src/: main.cpp
